tests/error/enum_duplicate_member.bz
// error: duplicate enum member name 'a'
// note: member was previously defined here
enum E
{
	a, a
}
